--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "build": "cd overclocked-frontend && npm run build"
+    "build": "cd overclocked-frontend && npm install && npm run build"
   },
   "author": "Ammar Yasser",
   "license": "ISC",
