--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Over Clocked Website",
   "main": "app.js",
   "scripts": {
-    "start": "node server.js",
-    "build": "cd overclocked-frontend && npm install && npm run build"
+    "start": "node server.js"
   },
   "author": "Ammar Yasser",
   "license": "ISC",
