--- a/overclocked-backend/package.json
+++ b/overclocked-backend/package.json
@@ -5,8 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
-    "build": "parcel build ./public/js/index.js --out-dir ./public/js --out-file bundle.js"
+    "dev": "nodemon server.js"
   },
   "author": "Ammar Yasser",
   "license": "ISC",
