--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node server.js",
-    "frontend:build": "cd overclocked-frontend && npm run build && cd dist && echo '/*    /index.html  200' > _redirects"
+    "dev": "nodemon server.js"
   },
   "author": "Ammar Yasser",
   "license": "ISC",
@@ -28,6 +28,7 @@
     "multer": "^1.4.2",
     "nodemailer": "^6.4.13",
     "pug": "^3.0.0",
+    "serve-static": "^1.14.2",
     "sharp": "^0.26.1",
     "slugify": "^1.4.5",
     "validator": "^13.1.17",
